# local-dictator

./: README.md  doctor.sh  install.sh  pyproject.toml  uninstall.sh
dictation/: audio.py  config.py  doctor.py  main.py  transcriber.py
dictation/resources/: dictation-settings.desktop
dictation/ui/: app.py  settings.py
